Grey out app icons for packages disabled due to GTOS gating
When a user has not accepted terms of service, some apps are disabled by the system. These disabled apps are shown on the launcher screen with reduced opacity indicating that the app is disabled. Upon launching the app the user is redirected to the value proposition screen.

Bug: 270412694
Test: atest AppLauncherUtilsTest#testGetLauncherAppsWithEnableAndTosDisabledApps
Change-Id: I1b113b6cba31e5bd8d43689976add906d21f039c

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -36,6 +36,7 @@
     <dimen name="app_icon_size">84dp</dimen>
     <dimen name="app_icon_scaled_size">100dp</dimen>
     <item name="app_icon_opacity_unavailable" type="dimen" format="float">0.5</item>
+    <item name="app_icon_opacity_tos_disabled" type="dimen" format="float">0.46</item>
     <item name="app_icon_opacity" type="dimen" format="float">1.0</item>
     <dimen name="app_name_margin_horizontal">6dp</dimen>
     <dimen name="app_item_highlight_corner_radius">18dp</dimen>
