--- a/res/values/overlayable.xml
+++ b/res/values/overlayable.xml
@@ -259,6 +259,7 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="string" name="tap_for_more_info_text"/>
       <item type="string" name="tap_to_launch_text"/>
       <item type="string" name="times_separator"/>
+      <item type="string" name="user_tos_activity_intent"/>
       <item type="string" name="weather_app_name"/>
       <item type="style" name="ActionDialogTheme"/>
       <item type="style" name="AppDisplayNameStyle"/>
