--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -78,4 +78,21 @@
         <item name="android:adjustViewBounds">true</item>
     </style>
 
+
+    <declare-styleable name="Banner">
+        <attr name="first_button_text" format="string"/>
+        <attr name="second_button_text" format="string"/>
+    </declare-styleable>
+
+    <style name="BannerButton">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/banner_content_margin</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:paddingBottom">@dimen/banner_content_margin</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/banner_button_text_color</item>
+        <item name="android:textSize">24dp</item>
+    </style>
+
 </resources>
