--- a/res/values/overlayable.xml
+++ b/res/values/overlayable.xml
@@ -23,6 +23,8 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="array" name="hidden_apps"/>
       <item type="array" name="packages_hidden_from_recents"/>
       <item type="attr" name="cardCornerRadius"/>
+      <item type="attr" name="first_button_text"/>
+      <item type="attr" name="second_button_text"/>
       <item type="bool" name="car_app_show_recent_apps"/>
       <item type="bool" name="car_app_show_toolbar"/>
       <item type="bool" name="config_allow_reordering"/>
@@ -34,6 +36,9 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="color" name="app_item_on_hover_background_color"/>
       <item type="color" name="app_item_on_hover_border_color"/>
       <item type="color" name="app_name_color"/>
+      <item type="color" name="banner_background_color"/>
+      <item type="color" name="banner_button_text_color"/>
+      <item type="color" name="banner_title_text_color"/>
       <item type="color" name="card_background_scrim"/>
       <item type="color" name="clear_all_recents_text_color"/>
       <item type="color" name="date_divider_bar_color"/>
@@ -61,6 +66,7 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="dimen" name="app_grid_width"/>
       <item type="dimen" name="app_icon_description_margin"/>
       <item type="dimen" name="app_icon_opacity"/>
+      <item type="dimen" name="app_icon_opacity_tos_disabled"/>
       <item type="dimen" name="app_icon_opacity_unavailable"/>
       <item type="dimen" name="app_icon_ripple_radius"/>
       <item type="dimen" name="app_icon_scaled_size"/>
@@ -70,6 +76,9 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="dimen" name="app_name_margin_horizontal"/>
       <item type="dimen" name="app_touch_target_margin"/>
       <item type="dimen" name="app_touch_target_padding"/>
+      <item type="dimen" name="banner_button_maximum_width"/>
+      <item type="dimen" name="banner_content_margin"/>
+      <item type="dimen" name="banner_image_view_size"/>
       <item type="dimen" name="button_outline_thickness"/>
       <item type="dimen" name="button_tap_target_icon_padding"/>
       <item type="dimen" name="button_tap_target_size"/>
@@ -94,19 +103,20 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="dimen" name="launcher_card_corner_radius"/>
       <item type="dimen" name="main_screen_widget_margin"/>
       <item type="dimen" name="media_top_margin"/>
+      <item type="dimen" name="page_indicator_edge_corner_radius"/>
+      <item type="dimen" name="page_indicator_height"/>
       <item type="dimen" name="page_snap_threshold"/>
       <item type="dimen" name="panel_margin"/>
       <item type="dimen" name="playback_controls_margin"/>
-      <item type="dimen" name="page_indicator_edge_corner_radius"/>
-      <item type="dimen" name="page_indicator_height"/>
       <item type="dimen" name="recent_apps_divider_margin"/>
       <item type="dimen" name="recent_apps_row_height"/>
       <item type="dimen" name="recent_task_col_space"/>
       <item type="dimen" name="recent_task_icon_size"/>
-      <item type="dimen" name="recent_task_row_space"/>
       <item type="dimen" name="recent_task_start_swipe_threshold"/>
       <item type="dimen" name="recent_task_swiped_threshold"/>
       <item type="dimen" name="recent_task_thumbnail_radius"/>
+      <item type="dimen" name="recent_task_width"/>
+      <item type="dimen" name="recent_task_width_first"/>
       <item type="dimen" name="search_bar_drawable_text_padding"/>
       <item type="dimen" name="search_bar_margin"/>
       <item type="dimen" name="search_box_height"/>
@@ -119,6 +129,7 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="dimen" name="threshold_to_start_drag_drop"/>
       <item type="dimen" name="vertical_border_size"/>
       <item type="drawable" name="app_item_highlight"/>
+      <item type="drawable" name="banner_warning_image"/>
       <item type="drawable" name="car_button_background"/>
       <item type="drawable" name="control_bar_contact_image_background"/>
       <item type="drawable" name="control_bar_image_background"/>
@@ -136,12 +147,14 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="drawable" name="ic_mute_activatable"/>
       <item type="drawable" name="ic_search_black"/>
       <item type="drawable" name="page_indicator_bar"/>
+      <item type="drawable" name="recent_task_hidden_icon"/>
       <item type="drawable" name="recent_task_shape"/>
       <item type="id" name="app_icon"/>
       <item type="id" name="app_item"/>
       <item type="id" name="app_name"/>
       <item type="id" name="apps_grid"/>
       <item type="id" name="apps_grid_background"/>
+      <item type="id" name="banner_title"/>
       <item type="id" name="bottom_card"/>
       <item type="id" name="bottom_edge"/>
       <item type="id" name="bottom_line"/>
@@ -162,7 +175,9 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="id" name="divider_horizontal"/>
       <item type="id" name="empty_state"/>
       <item type="id" name="end_edge"/>
+      <item type="id" name="first_button"/>
       <item type="id" name="focus_area"/>
+      <item type="id" name="icon"/>
       <item type="id" name="maps_card"/>
       <item type="id" name="media_descriptive_text"/>
       <item type="id" name="media_layout"/>
@@ -180,6 +195,7 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="id" name="recent_apps_row"/>
       <item type="id" name="recent_tasks_group"/>
       <item type="id" name="recent_tasks_list"/>
+      <item type="id" name="second_button"/>
       <item type="id" name="secondary_text"/>
       <item type="id" name="start_edge"/>
       <item type="id" name="tap_for_more_text"/>
@@ -190,6 +206,7 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="id" name="top_card"/>
       <item type="id" name="top_edge"/>
       <item type="id" name="top_line"/>
+      <item type="id" name="tos_banner"/>
       <item type="id" name="vertical_barrier"/>
       <item type="integer" name="car_app_selector_column_number"/>
       <item type="integer" name="car_app_selector_row_number"/>
@@ -197,6 +214,7 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="integer" name="config_msg_register_mirroring_pkg_code"/>
       <item type="integer" name="config_msg_send_mirroring_pkg_code"/>
       <item type="integer" name="config_msg_unregister_mirroring_pkg_code"/>
+      <item type="integer" name="config_recents_columns_per_page"/>
       <item type="integer" name="ms_background_highlight_duration"/>
       <item type="integer" name="ms_drop_animation_delay"/>
       <item type="integer" name="ms_long_press_animation_duration"/>
@@ -210,6 +228,7 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="integer" name="playback_controls_bar_columns"/>
       <item type="layout" name="app_grid_activity"/>
       <item type="layout" name="app_item"/>
+      <item type="layout" name="banner"/>
       <item type="layout" name="button_trio"/>
       <item type="layout" name="car_launcher"/>
       <item type="layout" name="car_launcher_multiwindow"/>
@@ -223,6 +242,8 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="layout" name="optional_seek_bar_with_times"/>
       <item type="layout" name="recent_apps_row"/>
       <item type="layout" name="recent_task_view"/>
+      <item type="layout" name="recent_task_view_first"/>
+      <item type="layout" name="recent_task_view_inner"/>
       <item type="layout" name="recents_activity"/>
       <item type="layout" name="tap_for_more_text"/>
       <item type="layout" name="text_block"/>
@@ -266,6 +287,7 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="string" name="weather_app_name"/>
       <item type="style" name="ActionDialogTheme"/>
       <item type="style" name="AppDisplayNameStyle"/>
+      <item type="style" name="BannerButton"/>
       <item type="style" name="CardViewStyle"/>
       <item type="style" name="ClearAllRecentTasksButton"/>
       <item type="style" name="ContextualSpace"/>
