Launch custom activity when default maps have been disabled by tos
We want to display a custom activity when default maps have been disabled when user has not accepted tos. After accepting the tos, the homescreen activity is recreated to display the maps (default handling).

Bug: 278580993
Bug: 278581334
Test: atest CarLauncherTest#onCreate_tosMapActivity_tosUnaccepted_canvasOptimizedMapsDisabledByTos
Test: atest CarLauncherTest#onCreate_tosMapActivity_tosUnaccepted_MapsNotDisabledByTos
Test: atest CarLauncherTest#onCreate_tosMapActivity_tosAccepted
Test: atest CarLauncherTest#onCreate_tosStateContentObserver_tosAccepted
Test: atest CarLauncherTest#recreate_tosStateContentObserver_tosNotAccepted

Change-Id: I750dfe68a571570111c2c286ca243bcf2f1ca1d6

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -46,6 +46,12 @@
     -->
     <string name="config_smallCanvasOptimizedMapIntent" translatable="false"></string>
 
+    <!-- An intent to start tos map activity when user has not accepted terms of service
+         URI, for example:
+         "intent:#Intent;component=com.android.car.carlauncher/com.android.car.carlauncher.homescreen.MapActivityTos;action=android.intent.action.MAIN;end"
+    -->
+    <string name="config_tosMapIntent" translatable="false"></string>
+
     <!--
         A list of package names that will prompt a restart of the Task inside TaskView,
         when the package is updated.
