--- a/res/values/overlayable.xml
+++ b/res/values/overlayable.xml
@@ -88,17 +88,18 @@ REGENERATE USING packages/apps/Car/libs/tools/rro/generate-overlayable.py
       <item type="dimen" name="descriptive_text_only_top_margin"/>
       <item type="dimen" name="descriptive_text_with_controls_top_margin"/>
       <item type="dimen" name="disabled_recent_task_alpha"/>
+      <item type="dimen" name="fling_threshold"/>
       <item type="dimen" name="home_card_button_size"/>
       <item type="dimen" name="horizontal_border_size"/>
       <item type="dimen" name="icon_size"/>
       <item type="dimen" name="launcher_card_corner_radius"/>
       <item type="dimen" name="main_screen_widget_margin"/>
       <item type="dimen" name="media_top_margin"/>
+      <item type="dimen" name="page_indicator_edge_corner_radius"/>
+      <item type="dimen" name="page_indicator_height"/>
       <item type="dimen" name="page_snap_threshold"/>
       <item type="dimen" name="panel_margin"/>
       <item type="dimen" name="playback_controls_margin"/>
-      <item type="dimen" name="page_indicator_edge_corner_radius"/>
-      <item type="dimen" name="page_indicator_height"/>
       <item type="dimen" name="recent_apps_divider_margin"/>
       <item type="dimen" name="recent_apps_row_height"/>
       <item type="dimen" name="recent_task_col_space"/>
