Update homescreen cards secondary text line wrapping
We want to allow multiple lines on the secondary text of homescreen cards

Bug: 278581285
Test: Manual Testing
Change-Id: Ibe3c5ef7b60541688009bd1e5ba81e54d3186d2e

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -88,4 +88,8 @@
         the passenger Launcher role too.
     -->
     <string name="config_passengerLauncherComponent">com.android.car.multidisplay/.launcher.LauncherActivity</string>
+
+    <!-- Boolean value to indicate if the secondary descriptive text of homescreen cards
+         without controls should have multiple lines -->
+    <bool name="config_homecard_single_line_secondary_descriptive_text">true</bool>
 </resources>
