--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -85,10 +85,13 @@
     <style name="RecentTaskThumbnail">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">0dp</item>
-        <item name="android:background">@drawable/recent_task_shape</item>
         <item name="android:clipToOutline">true</item>
         <item name="android:scaleType">centerCrop</item>
         <item name="android:adjustViewBounds">false</item>
+        <item name="shapeAppearanceOverlay">@style/RecentTaskThumbnail.RoundedBorder</item>
+    </style>
+
+    <style name="HiddenRecentTaskThumbnail" parent="RecentTaskThumbnail">
     </style>
 
     <style name="RecentTaskDismissButton">
@@ -112,5 +115,10 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textColor">@color/banner_button_text_color</item>
         <item name="android:textSize">24dp</item>
+    </style>
+
+    <style name="RecentTaskThumbnail.RoundedBorder">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">8dp</item>
     </style>
 </resources>
