Calm mode - Setting up UI
Setting up activity, fragment, styles, configs
Adding clock and date to Calm mode screen

Bug: 289412878
Bug: 289412875

Test: atest CalmModeFragmentTest

Change-Id: I641855342132511bddabd43457f685b15a6925de

--- a/app/res/values/themes.xml
+++ b/app/res/values/themes.xml
@@ -21,4 +21,10 @@
         <item name="textAppearanceGridItemSecondary">@android:style/TextAppearance.DeviceDefault.Small</item>
     </style>
 
+    <style name="Theme.CalmMode" parent="Theme.CarUi.NoToolbar">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@android:color/transparent</item>
+        <item name="android:windowBackground">@android:color/black</item>
+    </style>
 </resources>
