--- a/app/res/layout/calm_mode_activity.xml
+++ b/app/res/layout/calm_mode_activity.xml
@@ -14,22 +14,9 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <Button
-        android:id="@+id/exit_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/calm_mode_title"/>
-
-    <TextView
-        android:id="@+id/primary_text"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_marginStart="@dimen/card_content_image_margin" />
-</LinearLayout>
+<androidx.fragment.app.FragmentContainerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/fragment_container_view"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:name="com.android.car.carlauncher.calmmode.CalmModeFragment" />
