--- a/app/res/values/config.xml
+++ b/app/res/values/config.xml
@@ -76,4 +76,15 @@
     <!-- Boolean value to indicate if the secondary descriptive text of homescreen cards
          without controls should have multiple lines -->
     <bool name="config_homecard_single_line_secondary_descriptive_text">true</bool>
+
+    <!-- Config values for Calm mode and information shown on the Calm mode screen -->
+    <bool name="config_enableCalmMode">true</bool>
+    <bool name="config_calmMode_showClock">true</bool>
+    <bool name="config_calmMode_showMedia">true</bool>
+    <bool name="config_calmMode_showNavigation">true</bool>
+    <bool name="config_calmMode_showDate">true</bool>
+    <bool name="config_calmMode_showTemperature">true</bool>
+    <string name="config_calmMode_packageName">com.android.car.carlauncher</string>
+    <string name="config_calmMode_activityName">com.android.car.carlauncher.calmmode.CalmModeActivity</string>
+
 </resources>
