--- a/app/res/values/dimens.xml
+++ b/app/res/values/dimens.xml
@@ -86,4 +86,11 @@
       This will allow most task thumbnails to be displayed without cropping. -->
     <dimen name="recent_task_width_first">1036dp</dimen>
     <dimen name="recent_task_width">432dp</dimen>
+
+    <!-- Calm mode sizes -->
+    <dimen name="calm_mode_padding">12dp</dimen>
+    <dimen name="calm_mode_icon_size_regular">32dp</dimen>
+    <dimen name="calm_mode_icon_size_small">16dp</dimen>
+    <dimen name="calm_mode_icon_margin">4dp</dimen>
+    <dimen name="calm_mode_text_size">24sp</dimen>
 </resources>
