Update homescreen styling for DS 2.0
Bug: 267374877
Test: manual
Change-Id: I66d52e7b59d2f5f923be6f27adefc6083483eb56

--- a/app/res/layout/car_launcher.xml
+++ b/app/res/layout/car_launcher.xml
@@ -21,6 +21,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="ltr"
+    android:background="@android:color/black"
     tools:context=".CarLauncher">
 
     <com.android.car.ui.FocusParkingView
