--- a/app/res/layout-land/car_launcher.xml
+++ b/app/res/layout-land/car_launcher.xml
@@ -21,6 +21,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="ltr"
+    android:background="@android:color/black"
     tools:context=".CarLauncher">
 
     <com.android.car.ui.FocusParkingView
@@ -31,6 +32,7 @@
         android:id="@+id/top_card"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="@dimen/main_screen_widget_margin"
         android:layout_marginBottom="@dimen/main_screen_widget_margin"
         android:layoutDirection="locale"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -42,6 +44,7 @@
         android:id="@+id/bottom_card"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="@dimen/main_screen_widget_margin"
         android:layoutDirection="locale"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/vertical_barrier"
@@ -60,7 +63,7 @@
         style="@style/CardViewStyle"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginLeft="@dimen/main_screen_widget_margin"
+        android:layout_marginHorizontal="@dimen/main_screen_widget_margin"
         android:layoutDirection="locale"
         app:layout_constraintLeft_toRightOf="@+id/vertical_barrier"
         app:layout_constraintRight_toRightOf="parent"
