Calm mode - Add background image
Add config to set drawable for Calm mode background

Bug: 289413466, 289412875

Test: atest CalmModeFragmentTest
Change-Id: I94a237fd305a55bf26454e26fda588a03a482d25

--- a/app/res/layout/calm_mode_date_and_temperature.xml
+++ b/app/res/layout/calm_mode_date_and_temperature.xml
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
+        android:layout_marginTop="@dimen/calm_mode_padding"
         android:layout_marginEnd="@dimen/calm_mode_padding"
         app:layout_constraintEnd_toStartOf="@id/temperature_icon"
         app:layout_constraintTop_toTopOf="parent" />
@@ -49,6 +50,8 @@
         style="@style/CalmMode.Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/calm_mode_padding"
+        android:layout_marginEnd="@dimen/calm_mode_padding"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
