--- a/docklib/res/values/config.xml
+++ b/docklib/res/values/config.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!--
-  ~ Copyright (C) 2023 The Android Open Source Project.
+  ~ Copyright (C) 2023 The Android Open Source Project
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -15,15 +15,7 @@
   ~ limitations under the License.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.car.docklib.test">
-
-    <application android:debuggable="true">
-        <uses-library android:name="android.test.runner"/>
-    </application>
-
-    <instrumentation
-        android:name="androidx.test.runner.AndroidJUnitRunner"
-        android:label="Tests for Car Dock Lib"
-        android:targetPackage="com.android.car.docklib.test" />
-</manifest>
+<resources>
+    <!-- Package that contains the dock view -->
+    <string name="config_dockViewPackage" translatable="false">com.android.systemui</string>
+</resources>
