Add basic Views
Show a recyclerview with hardcoded apps

Bug: 301483072
Test: manual, atest CarDockLibTests, https://hsv.googleplex.com/6273571853697024

Change-Id: If647f03c66cda6c00992c6d088c2bf54814afa71

--- a/docklib/res/layout/dock_view.xml
+++ b/docklib/res/layout/dock_view.xml
@@ -14,8 +14,13 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<resources>
-    <!-- Number of apps that should be shown on Dock -->
-    <integer name="config_numDockApps">3</integer>
-</resources>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+</merge>
