Add View Controller and default app provider
Use the default app provider to set up the Dock

Bug: b/301483072
Test: manual, atest CarDockLibTests
Change-Id: Ib751cae621fa753973b2a4e81e0de679b5f3b216

--- a/docklib/res/values/config.xml
+++ b/docklib/res/values/config.xml
@@ -17,5 +17,13 @@
 
 <resources>
     <!-- Number of apps that should be shown on Dock -->
-    <integer name="config_numDockApps">3</integer>
+    <integer name="config_numDockApps">4</integer>
+
+    <!-- A list of components that are shown on Dock by default -->
+    <string-array name="config_defaultDockApps" translatable="false">
+        <item>com.android.vending/com.google.android.finsky.carmainactivity.MainActivity</item>
+        <item>com.android.car.settings/com.android.car.settings.Settings_Launcher_Homepage</item>
+        <item>com.android.car.dialer/com.android.car.dialer.ui.TelecomActivity</item>
+        <item>com.google.android.apps.maps/com.google.android.maps.MapsActivity</item>
+    </string-array>
 </resources>
