Add broadcast permissions for dock
The sender should aquire the permission to be able to broadcast events
to the dock. The receiver should aquire the permission to be able to
listen to the broadcasted events.

Bug: 301483111
Bug: 301482374
Test: atest CarDockLibTests CarDockUtilLibTests
Change-Id: Ideb80745f12eaaaf3af0c81b52ac1373c549fd6e

--- a/docklib-util/res/values/config.xml
+++ b/docklib-util/res/values/config.xml
@@ -16,10 +16,7 @@
   -->
 
 <resources>
-    <!-- Package that contains the dock view -->
-    <string name="config_dockViewPackage" translatable="false">com.android.systemui</string>
-    <!-- BroadcastReceiver class that receives dock events -->
-    <string name="config_dockReceiver" translatable="false">
-        com.android.car.docklib.events.DockEventsReceiver
-    </string>
+    <!-- Flag to enable/disable dock -->
+    <!-- todo(b/304320644): remove flag -->
+    <bool name="config_enableDock">false</bool>
 </resources>
