--- a/libs/appgrid/lib/res/values/dimens.xml
+++ b/libs/appgrid/lib/res/values/dimens.xml
@@ -31,26 +31,26 @@
     <dimen name="page_indicator_height">4dp</dimen>
     <!-- Gap between top of screen (statusbar) and header content -->
     <dimen name="recent_apps_divider_margin">40dp</dimen>
-    <dimen name="app_grid_header_margin">@*android:dimen/car_padding_4</dimen>
-    <dimen name="panel_margin">@*android:dimen/car_margin</dimen>
+    <dimen name="app_grid_header_margin">32dp</dimen>
+    <dimen name="panel_margin">20dp</dimen>
     <!-- Height of the text and exit button on the app selection screen -->
-    <dimen name="app_bar_height">@*android:dimen/car_app_bar_height</dimen>
-    <dimen name="icon_size">@*android:dimen/car_primary_icon_size</dimen>
-    <dimen name="recent_apps_row_height">@*android:dimen/car_list_divider_height</dimen>
-    <dimen name="app_grid_touch_target_size">@*android:dimen/car_touch_target_size</dimen>
+    <dimen name="app_bar_height">80dp</dimen>
+    <dimen name="icon_size">56dp</dimen>
+    <dimen name="recent_apps_row_height">1dp</dimen>
+    <dimen name="app_grid_touch_target_size">76dp</dimen>
     <!-- Padding around the touch target (makes ripple look better) -->
-    <dimen name="app_touch_target_padding">@*android:dimen/car_padding_2</dimen>
-    <dimen name="app_touch_target_margin">@*android:dimen/car_padding_1</dimen>
-    <dimen name="app_grid_row_margin">@*android:dimen/car_padding_4</dimen>
-    <dimen name="app_icon_description_margin">@*android:dimen/car_padding_2</dimen>
-    <dimen name="app_icon_ripple_radius">@*android:dimen/car_radius_2</dimen>
+    <dimen name="app_touch_target_padding">16dp</dimen>
+    <dimen name="app_touch_target_margin">8dp</dimen>
+    <dimen name="app_grid_row_margin">32dp</dimen>
+    <dimen name="app_icon_description_margin">16dp</dimen>
+    <dimen name="app_icon_ripple_radius">8dp</dimen>
 
     <!-- AppSearchActivity -->
     <dimen name="search_item_width">760dp</dimen>
-    <dimen name="search_result_margin">@*android:dimen/car_padding_1</dimen>
-    <dimen name="search_result_text_margin">@*android:dimen/car_keyline_3</dimen>
+    <dimen name="search_result_margin">8dp</dimen>
+    <dimen name="search_result_text_margin">152dp</dimen>
     <dimen name="search_box_height">65dp</dimen>
-    <dimen name="search_bar_margin">@*android:dimen/car_keyline_1</dimen>
+    <dimen name="search_bar_margin">48dp</dimen>
     <dimen name="search_bar_drawable_text_padding">46dp</dimen>
 
     <!-- percentage of view holders on the next page that must be fully visible to the user to
